fixed aligning problem text max windows

--- a/style.css
+++ b/style.css
@@ -633,7 +633,7 @@
   .project-window.max > .content > .textbox.max > .project__content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 1rem;
   }
 
   /* tibetan singing robot */
